Prevent overflow of description

--- a/media/less/style/chat/rooms.less
+++ b/media/less/style/chat/rooms.less
@@ -47,6 +47,8 @@
 }
 
 .lcb-room-meta {
+    padding-right: 15px;
+    .text-overflow;
     .flex(1);
 }
 
@@ -72,7 +74,6 @@
     color: #9f9f9f;
     margin: 0;
     display: inline;
-    .text-overflow;
     @media (max-width: @screen-xs-max) {
         font-size: 12px;
     }
